# top-tracks-hub

./: .gitignore  Procfile  README.md  app.py  package.json  requirements.txt  run.py  start.sh
app/: api.py  api_utils.py  app.py  auto_update.py  controller.py  models.py  requirements.txt  scrape_top_tracks.py  spotify.py  views.py
app/templates/: base.html  display-songs.html  display_tracks.html  index.html  profile.html  search-results.html  signup.html  song-info.html  verify-email.html
app/test/: app_tests.py
mobile/: App.js  config.js  package-lock.json  package.json
mobile/components/: home.js  login.js  navBar.js  signup.js  styles.js  userTopContent.js
mobile/store/: actions.js  reducers.js  store.js
mobile/utils/: accessToken.js  api.js  openSpotify.js
server/: app.py  pyproject.toml  requirements.txt  run.py
server/app/: api.py  api_utils.py  app.py  auto_update.py  controller.py  db.sqlite  models.py  scrape_top_tracks.py  spotify.py  validator_utils.py
server/app/config_files/: .placeholder
server/app/integrations/: scrape_top_tracks.py  spotify.py
server/app/routes/: auth_routes.py  schemas.py  tracks_routes.py  user_routes.py
server/app/test/: app_tests.py
server/app/utils/: validator_utils.py
test/: app_tests.py  test.db
ui/: package-lock.json  package.json
ui/public/: index.html
ui/public/exampleData/: top_artists_long_term.json  top_artists_medium_term.json  top_artists_short_term.json  top_tracks_long_term.json  top_tracks_medium_term.json  (+1 more)
ui/src/: App.css  App.js  index.js  spinnerStyle.js
ui/src/utils/: api.js  (+5 more)
(+38 files in other folders)
